[IOTMID-573] Fixes positioning of error messages on firefox
On firefox, for some yet unknown reason, the position:absolute
used to allow the horizontal alignment of the error message
ends up overriding the flexbox positioning, causing the div
to be placed on the top of the first relative parent.

This change such positioning to be relative, fixing the error seen
on firefox.

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -139,7 +139,7 @@ body {
 }
 
 .horizontal-center {
-  position: absolute;
+  position: relative;
   left: 0;
   right: 0;
   margin: auto;
